<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Garden</string>
    <string name="Title">Smart Garden Home</string>
    <string name="artificial_light">Artificial Light</string>
    <string name="cooling_fan">Cooling Fan</string>
    <string name="waterpump">Waterpump</string>
    <string name="moisture">Moisture</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="light">Light</string>
    <string name="temperature">Temperature</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="chart">Chart</string>
    <string name="graph_charts">Graph Charts</string>
    <string-array name="period_length_array">
        <item>last hour</item>
        <item>last six hours</item>
        <item>last day</item>
        <item>last week</item>
        <item>last month</item>
    </string-array>
</resources>