<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_700"
        android:elevation="4dp"
        android:theme="@style/Theme.SmartGarden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textViewHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/michroma"
        android:text="@string/Title"
        android:textAlignment="center"
        android:textColor="@color/green_700"
        android:textSize="16dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTemp"
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:gravity="center"
                    android:text="0°"
                    android:textColor="@color/black"
                    android:textSize="28dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPressure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textViewPressure1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPressure2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="0 kPa"
                    android:textColor="@color/black"
                    android:textSize="28dp" />
            </androidx.cardview.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/light"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewLight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="0 Lux"
                    android:textColor="@color/black"
                    android:textSize="28dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/cooling_fan"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="107dp"
                    android:layout_height="57dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/off"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/waterpump"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch4"
                    android:layout_width="107dp"
                    android:layout_height="57dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/off"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/artificial_light"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="107dp"
                    android:layout_height="57dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="22dp"
                    android:text="@string/off"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="199dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/moisture"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progress_bar_moist"
                    style="@style/CircularDeterminateProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:layout_marginTop="22dp"
                    android:indeterminateOnly="false"
                    android:progress="60"
                    android:progressDrawable="@drawable/circle"
                    android:rotation="-90"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:progress="0" />

                <TextView
                    android:id="@+id/text_view_progress_moist"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="0%" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="4dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/humidity"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progress_bar_humidity"
                    style="@style/CircularDeterminateProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="155dp"
                    android:layout_marginTop="22dp"
                    android:indeterminateOnly="false"
                    android:progress="60"
                    android:progressDrawable="@drawable/circle"
                    android:rotation="-90"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:progress="0" />

                <TextView
                    android:id="@+id/text_view_progress_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    tools:text="0%" />

            </androidx.cardview.widget.CardView>

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>